# Czech-Working-Days

./: .gitignore  LICENSE  README.md  czech_workdays_holidays.py  czech_working_days.py  pyproject.toml  setup.cfg  setup.py
src/czech_workdays_holidays/: czech_workdays_holidays.py
test/: tests.py
