[metadata]
name = czech-workdays-holidays
version = 0.0.5
author = David Gamba
author_email = gamba.d@seznam.cz
description = Czech Workdays and Holidays including work-restricted holidays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/david-gamba/Czech-Working-Days
project_urls =
    Bug Tracker = https://github.com/david-gamba/Czech-Working-Days/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src